# yer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  action.yml  pyproject.toml
.claude/agents/: rule-author.md
.claude/commands/: next-milestone.md  spec.md  task.md  verify-corpus.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  ci.md  corpus.md  data-format.md  quickstart.md  releasing.md  roadmap.md  spec-driven-workflow.md
docs/specs/: SPEC-000-overview.md  SPEC-001-parser.md  SPEC-002-analyzer.md  SPEC-003-cli.md  SPEC-004-report-render.md  SPEC-005-llm-summary.md  SPEC-006-trends.md  SPEC-007-release.md
scripts/: changelog_section.py  release_consistency.py
tasks/: milestone-0.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  milestone-7.md
tests/: conftest.py  test_analyze.py  test_changelog_section.py  test_ci_artifacts.py  test_ci_recipe.py  test_ci_workflow.py  test_cli_analyze.py  test_cli_analyze_format.py  test_cli_report.py  test_cli_sarif.py  test_cli_summarize.py  test_cli_trend.py  test_cli_version.py  test_composite_action.py  test_corpus_smoke.py  test_dedup.py  test_fallback.py  test_fixtures.py  test_ingest.py  test_ingest_inputs.py  test_ingest_malformed.py  test_inventory.py  test_json_out.py  test_json_out_privacy.py  test_license.py  test_models.py  test_normalize.py  test_parse.py  test_parse_backtrace.py  test_rank.py  test_release_consistency.py  test_release_install.py  test_release_meta.py  test_release_workflow.py  test_releasing_doc.py  test_rules_configure_compile.py  test_rules_dep_fetch.py  test_rules_patch.py  test_rules_qa.py  test_sarif.py  (+12 more)
tests/fixtures/: README.md  compile_gz-sim-vendor.json  compile_nanoflann.json  configure_gz-gui9.json  dependency_moveit.json  derive_fixtures.py  fetch_dartsim.json  patch_ogre-next.json  qa_gz-physics-vendor.json
tests/fixtures/malformed/: not-json.txt  truncated.txt
yer/: models.py  summarize.py
yer/analyze/: evidence.py  rank.py  signatures.py
yer/analyze/rules/: __init__.py  _signals.py  configure.py  dependency.py  fallback.py  fetch.py
yer/render/: __init__.py  json_out.py  static.py
yer/render/templates/: report.html.j2
yer/trends/: __init__.py  store.py
yocto_error_reports/: __init__.py  cli.py  ingest.py  inventory.py  models.py  parse.py  redact.py  summarize.py
yocto_error_reports/analyze/: __init__.py  dedup.py  signatures.py
yocto_error_reports/analyze/rules/: __init__.py  compile.py  patch.py  qa.py
yocto_error_reports/render/: json_out.py  sarif.py  static.py
yocto_error_reports/render/templates/: report.html.j2
yocto_error_reports/trends/: diff.py
