[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yocto-error-reports"
description = "Parse Yocto error-report.txt files into ranked build findings."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Rob Woolley", email = "rob@robertwoolley.com" }]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
yer = "yocto_error_reports.cli:main"

[tool.hatch.version]
path = "yocto_error_reports/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["yocto_error_reports"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  # Registered ahead of the M0-07 corpus smoke harness so --strict-markers holds.
  "slow: whole-corpus / large-input tests (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
# Strict on the source package (the cross-stage contract); tests stay untyped.
python_version = "3.11"
strict = true
files = ["yocto_error_reports"]
