[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yocto-error-reports"
description = "Parse Yocto error-report.txt files into ranked build findings."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rob Woolley", email = "rob@robertwoolley.com" }]
keywords = ["yocto", "openembedded", "bitbake", "ci", "build-errors", "logs"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dynamic = ["version"]
dependencies = ["jinja2>=3"]  # render/ only (HTML report); core stays stdlib-only

[project.urls]
Homepage = "https://github.com/robwoolley/yer"
Repository = "https://github.com/robwoolley/yer"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pyyaml"]  # pyyaml: validate the docs/ci.md workflow

[project.scripts]
yer = "yocto_error_reports.cli:main"

[tool.hatch.version]
path = "yocto_error_reports/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["yocto_error_reports"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  # Registered ahead of the M0-07 corpus smoke harness so --strict-markers holds.
  "slow: whole-corpus / large-input tests (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
# Strict on the source package (the cross-stage contract); tests stay untyped.
python_version = "3.11"
strict = true
files = ["yocto_error_reports"]
