[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yer"
description = "Parse Yocto error-report.txt files into ranked build findings."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rob Woolley", email = "rob@robertwoolley.com" }]
keywords = ["yocto", "openembedded", "bitbake", "ci", "build-errors", "logs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dynamic = ["version"]
dependencies = ["jinja2>=3"]  # render/ only (HTML report); core stays stdlib-only

[project.urls]
Homepage = "https://github.com/robwoolley/yer"
Repository = "https://github.com/robwoolley/yer"
Changelog = "https://github.com/robwoolley/yer/blob/main/CHANGELOG.md"
Issues = "https://github.com/robwoolley/yer/issues"

[project.optional-dependencies]
# pyyaml: validate the docs/ci.md workflow; build+hatchling: hermetic packaging test.
dev = ["pytest", "ruff", "mypy", "pyyaml", "build", "hatchling"]

[project.scripts]
yer = "yer.cli:main"

[tool.hatch.version]
path = "yer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["yer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  # Registered ahead of the M0-07 corpus smoke harness so --strict-markers holds.
  "slow: whole-corpus / large-input tests (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
# Strict on the source package (the cross-stage contract); tests stay untyped.
python_version = "3.11"
strict = true
files = ["yer"]
